--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "@emotion/styled": "^11.10.8",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.12.2",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
+    "@stripe/stripe-js": "^1.53.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "firebase": "^9.21.0",
     "next": "13.3.2",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "recoil": "^0.7.7",
+    "stripe": "^12.5.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.0.4"
   },
